# exercicio_ci_cd

./: README.md  justfile  resposta_ci.yaml
.github/workflows/: main.yml  resposta_ci.yml
exercicio/: README.md
resposta/: README.md  pyproject.toml
resposta/scripts/: app.py
resposta/testes/: test_app.py
